--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,43 @@
 <%- include("partials/header") %>
 
-<h1>Hello World</h1>
+<div class="topic">
+  <div class="cont">
+    <h1>Panda.ui</h1>
+    <h3>A web package to provide you readymade backgrounds</h3>
+  </div>
+</div>
+
+<div class="cont">
+  <div class="base"></div>
+    <div class="laptop">
+      <div class="screen">
+        <div class="website">
+          <div class="circle"></div>
+          <div class="text"></div>
+          <div class="picture">
+            <div class="line-1"></div>
+            <div class="line-2"></div>
+          </div>
+        </div>
+        <div class="editor">
+          <div class="circle"></div>
+          <div class="line-3"></div>
+          <div class="line-4"></div>
+          <div class="line-5"></div>
+          <div class="white"></div>
+          <div class="white-2"></div>
+          <div class="pink"></div>
+          <div class="pink-2"></div>
+          <div class="pink-3"></div>
+          <div class="green"></div>
+          <div class="green-2"></div>
+          <div class="yellow"></div>
+          <div class="cursor"></div>
+        </div>
+      </div>
+    </div> 
+  </div>
+</div>
+<script src="https://ishanbagchi.github.io/backgrounds/js/fireflies.js"></script>  
 
 <%- include("partials/footer") %>
