--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,5 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>panda.ui</title>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="/stylesheets/css/style.css">
 </head>
 <body>
